# TUI

./: df  pyproject.toml
concert_reservation/: __init__.py  __main__.py  app.py  domain.py
tests/: __init__.py  test_app.py  test_domain.py  test_menu.py  test_reservation.py
tui/: concert.py  event_handler.py  main.py  reservation.py  ticket.py  user.py  validators.py
