[tool.poetry]
name = "tui"
version = "0.1.0"
description = ""
authors = ["samuele siciliano <sclsml02t29g317g@studenti.unical.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pytest = "^8.3.4"
typeguard = "^4.4.1"
validators = "^0.34.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
