[tool.poetry]
name = "restaurant-2024"
version = "0.1.0"
description = ""
authors = ["malvi <mario.alviano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typeguard = "^4.4.1"
valid8 = "^5.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
coverage = "^7.6.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
